<resources>
    <string name="app_name">Library</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_reviews">View Book Reviews</string>
    <string name="action_filter_category">Category</string>
    <string name="action_filter_name">Name</string>
    <string name="action_filter_zone">Zone</string>
    <string name="action_filter_date">Date</string>
    <string name="action_filter_author">Author</string>
    <string name="backdrop_title">LOVE READING</string>
    <string name="backdrop_subtitle"></string>
</resources>